# equal1-benchmarking

./: .gitmodules  README.md  pyproject.toml
docs/QC-app-oriented-benchmark/: benchmark_equal1.ipynb  benchmark_hpc_gamma1.ipynb
docs/benchmarks/: bernstein-vazirani.ipynb  ghz_states.ipynb  qaoa-maxcut.ipynb  random_clifford.ipynb  single_qubit_gate_fidelity.ipynb  t1_t2_time.ipynb  t1_t2_times.ipynb  t1_time.ipynb  t2_time.ipynb  two_qubit_gate_fidelity.ipynb
docs/devices/: bell1-6qubit.ipynb  bell2-167qubit.ipynb  bell2-32qubit.ipynb  bell2.ipynb
src/equal1/benchmarking/: experiment.py  qbraid_wrapper.py
src/equal1/benchmarking/algorithms/: deutsch-jozsa.py  deutschjozsa.py  ghzstate.py  qaoa_maxcut.py
src/equal1/benchmarking/device_characterization/: gate_fidelity.py  randomised_benchmarking.py  thermal_noise.py
src/equal1/utils/: qc_app_benchmark.py
