[project]
name = "equal1-benchmarking"
version = "0.1.0"
description = "Tests to verify the performance of an Equal1 device."
readme = "README.md"
authors = [{ name = "Equal1", email = "info@equal1.com" }]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pylatexenc>=2.10",
    "qbraid>=0.9.10",
    "qiskit>=2.1.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equal1"]

[tool.uv]
prerelease = "allow"
